@@ -9,30 +9,21 @@ LIBNAME=libfoo.a        # xxx- your library names goes here
 LIB=${ARCH}/${LIBNAME}
 
 # C and C++ source names, if any, go here -- minus the .c or .cc
-C_PIECES=
-C_FILES=$(C_PIECES:%=%.c)
-C_O_FILES=$(C_PIECES:%=${ARCH}/%.o)
+C_FILES=
+C_O_FILES=$(C_FILES:%.c=${ARCH}/%.o)
 
-CC_PIECES=foo
-CC_FILES=$(CC_PIECES:%=%.cc)
-CC_O_FILES=$(CC_PIECES:%=${ARCH}/%.o)
+CC_FILES=foo.cc
+CC_O_FILES=$(CC_FILES:%.cc=${ARCH}/%.o)
 
-CPP_PIECES=foo1
-CPP_FILES=$(CPP_PIECES:%=%.cpp)
-CPP_O_FILES=$(CPP_PIECES:%=${ARCH}/%.o)
+CPP_FILES=foo1.cpp
+CPP_O_FILES=$(CPP_FILES:%.cpp=${ARCH}/%.o)
 
 H_FILES=foo.h
 
-# Assembly source names, if any, go here -- minus the .s
-S_PIECES=
-S_FILES=$(S_PIECES:%=%.s)
-S_O_FILES=$(S_FILES:%.s=${ARCH}/%.o)
-
-SRCS=$(C_FILES) $(CC_FILES) $(CPP_FILES) $(H_FILES) $(S_FILES)
-OBJS=$(C_O_FILES) $(CC_O_FILES) $(CPP_O_FILES) $(S_O_FILES)
+SRCS=$(C_FILES) $(CC_FILES) $(CPP_FILES) $(H_FILES)
+OBJS=$(C_O_FILES) $(CC_O_FILES) $(CPP_O_FILES)
 
 include $(RTEMS_MAKEFILE_PATH)/Makefile.inc
-
 include $(RTEMS_CUSTOM)
 include $(PROJECT_ROOT)/make/lib.cfg
 
@@ -59,7 +50,6 @@ CFLAGS   +=
 #  to just run 'make clean' first to see what gets missed.
 #  'make clobber' already includes 'make clean'
 #
-
 CLEAN_ADDITIONS +=
 CLOBBER_ADDITIONS +=
 
