@@ -1,1 +1,7 @@
+#
+# $Id$
+#
+
 Example C++ library submitted by Ralf Corsepius <corsepiu@faw.uni-ulm.de>.
+
+The C++ is just place holders to illustrate the Makefile mechanics needed.
